# article_creator

./: DDGSEARCH_README.md  ENHANCED_FEATURES.md  README.md  demo_enhanced_article.py  demo_memory_react.py  example_ddgsearch.py  pyproject.toml  test_ddgsearch_simple.py  test_memory_fix.py
data/articles/: dspy-based-agent-system-with-memory-en.md  dspy-based-agent-system-with-memory-kor.md  dspy-based-agent-system-with-memory-research.md  global-warming-en.md  global-warming-kor.md  global-warming-research.md  how-to-combine-langchain-and-dspy-framework-en.md  how-to-combine-langchain-and-dspy-framework-kor.md  how-to-combine-langchain-and-dspy-framework-research.md  langchain-vs-dspy-en.md  langchain-vs-dspy-kor.md  langchain-vs-dspy-research.md  major-python-platform-for-ai-agents-en.md  major-python-platform-for-ai-agents-kor.md  react-based-agent-system-en.md  react-based-agent-system-kor.md  react-based-agent-system-research.md  research_evaluation_1.md  the-impact-of-ai-on-jobs-kor.md  the-overview-of-ai-agents-en.md  the-overview-of-ai-agents-kor.md  trend-in-ai-agents-en.md  trend-in-ai-agents-kor.md  vertex-ai-en.md  vertex-ai-kor.md  vertex-ai-research.md
docs/: MEMORY_FEATURES.md
src/: article_creator.py  bravesearch.py  ddgsearch.py  enhanced_article_creator.py  react_module.py  research_assistant.py  utils.py
tests_unit/: demo_enhanced_article.py  demo_memory_react.py  example_ddgsearch.py  test_ddgsearch_simple.py  test_memory_fix.py
