[project]
name = "article-creator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "dspy>=2.6.27",
    "ruff>=0.12.4",
    "requests>=2.31.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
]

[tool.ruff]
# 지원할 Python 버전
target-version = "py313"

# 적용할 규칙들 (select와 extend-select는 병행 가능)
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "TID", "TCH", "RUF"]
extend-select = ["ANN", "T20"]

# 무시할 규칙들
ignore = ["E501"]  # E501: line too long (보통 formatter가 처리하므로 무시)

# 파일 무시 설정
exclude = [
  ".venv",
  "__pycache__",
  "migrations",
  "tests/data",
]

# max line length
line-length = 88  # black과 일치시키기 위함

# import 정렬 자동 적용
[tool.ruff.isort]
known-first-party = ["myproject"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
force-single-line = false
combine-as-imports = true

# docstring 규칙
[tool.ruff.pydocstyle]
convention = "google"  # 또는 "numpy", "pep257"

# 형 주석 관련 설정 (예: mypy 스타일)
[tool.ruff.mccabe]
max-complexity = 10